R1.1.6    Nov 18, 2019      Kukhee Kim (khkim)
          * build with asyn R4.32-1.0.0

R1.1.5    Oct 28, 2019      Kukhee Kim (khkim)
          * build with cpsw/framework R4.3.1  timing/hpsTpr R1.0.5 and yamlLoader R1.1.5

R1.1.4    Sep 20, 2019      Kukhee Kim (khkim)
          * build with cpsw/framework R4.2.0, timing/hpsTpr R1.0.4 and yamlLoader R1.1.4

R1.1.3    Jun 24, 2019      Kukhee Kim (KHKIM)
          * build with cpsw/framework R4.1.2 and yamlLoader R1.1.3

R1.1.2    Nov 8, 2018       Kukhee Kim (KHKIM)
          * build with yamlLoader     R1.1.2
          * build with yaml-cpp-0.5.3_boost-1.64.0
          * build with boost 1.64.0

R1.1.1    Sep 18, 2018      Kukhee Kim (KHKIM)
          * build with yamlLoader     R1.1.1
          * build with hpsTpr         R1.0.2
          * build with cpsw/framework R3.6.6
          * add evrTimePutPulseID in evrTime.h and its implementation

R1.1.0    July 3, 2018      Kukhee Kim (KHKIM)
          * PV name change to reflect LCLS-II naming convention
          * build against cpsw framework R3.6.4

R1.0.0    June 29, 2018     Kukhee Kim (KHKIM)
          force tag!!
          change bo record labels to "Enabled"/"Disabled"

R1.0.0    May 18, 2018      Kukhee Kim (KHKIM)
          force tag!!
          fix typo on PV name

R1.0.0    April 13, 2018    Kukhee Kim (KHKIM)
          force tag!!
          update README
          cleanup pattern diagnostics screen
          update pattern satstus PVs with 0 - need to implement status soon 

R1.0.0    March 21, 2018    Kukhee Kim (KHKIM)

          use yamlLoader R1.1.0
          use hpsTpr R1.0.0
          Use cpsw framework R3.6.3
          Remove un-ncessary structure and byte packing directive


          merge with Till's ts_fixes branch

          Bumped yamlLoader to R1.1.0-BR-ts
          new-style EPICS_BASE definition; -include ../../RELEASE_SITE
          Bumped timingApi to R0.6
          Removed RELEASE_SITE from git
          Remove RELEASE_SITE from git