@@ -25,7 +25,7 @@
 # ==========================================================
 
 ASYN_MODULE_VERSION=R4.32-1.0.0
-YAMLLOADER_MODULE_VERSION=R1.1.5
+YAMLLOADER_MODULE_VERSION=R2.0.0
 TIMINGAPI_MODULE_VERSION=R0.6
 
 
