@@ -1,3 +1,7 @@
+R1.2.0    Nov 22, 2019      Kukhee Kim (khkim)
+          * bulid with yamlLoader R2.0.0
+          * implement named_root to support multiple blades in a single ioc
+
 R1.1.6    Nov 18, 2019      Kukhee Kim (khkim)
           * build with asyn R4.32-1.0.0
 
